--- a/package.json
+++ b/package.json
@@ -18,15 +18,11 @@
   },
   "homepage": "https://github.com/Pibastte/BlockChainProgramming-BIP39-32#readme",
   "dependencies": {
-    "bip32": "^2.0.6",
-    "bip39": "^3.0.4",
-    "bs58": "^4.0.1",
-    "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
-    "elliptic": "^6.5.4",
     "pbkdf2": "^3.1.2",
     "prompt-sync": "^4.2.0",
     "random-number-csprng": "^1.0.2",
-    "secp256k1": "^4.0.2"
+    "secp256k1": "^4.0.2",
+    "syncprompt": "^2.0.0"
   }
 }
